[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.1"
indexmap = "1.9.2"
lazy_static = "1.4.0"
nom = { version = "7.1.1", features = ["alloc"] }
regex = "1.7.0"
